# armtts

./: CMakeLists.txt  README.md
cfg/: logger.properties  phonetic_processing_configuration.json
src/armtts/: CMakeLists.txt  armtts.pc
src/armtts/include/: engine.hpp  textPreprocessor.hpp
src/armtts/src/: engine.cpp  textPreprocessor.cpp
src/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
src/inference_engine/: CMakeLists.txt
src/inference_engine/include/: inferenceEngine.hpp  ssrnEngine.hpp  textToMelEngine.hpp
src/inference_engine/src/: inferenceEngine.cpp  ssrnEngine.cpp  textToMelEngine.cpp
src/logger/: CMakeLists.txt
src/logger/include/: logger.hpp
src/logger/src/: logger.cpp
src/phonetic_engine/: CMakeLists.txt
src/phonetic_engine/include/: phoneticEngine.hpp  phoneticProcessingEngine.hpp  phoneticProcessingHiddenLetters.hpp  searchPattern.hpp  searchReplacePattern.hpp
src/phonetic_engine/src/: phoneticEngine.cpp  phoneticProcessingEngine.cpp  phoneticProcessingHiddenLetters.cpp  searchPattern.cpp  searchReplacePattern.cpp
src/utilities/: CMakeLists.txt
src/utilities/include/: utilities.hpp
src/utilities/src/: utilities.cpp
tests/unit/: CMakeLists.txt
tests/unit/src/: engine.cpp  inferenceEngine.cpp  phoneticEngine.cpp  phoneticProcessingEngine.cpp  searchPattern.cpp  searchReplacePattern.cpp  ssrnEngine.cpp  textPreprocessor.cpp  textToMelEngine.cpp  utilities.cpp
